# Crescendo

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .submit.py  CHANGES.md  Dockerfile  README.md  codecov.yml  environment.yml  ml_config_template.yaml  pyproject.toml  run.py  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_no_deploy.yml  examples.yml  smoke.yml  unit.yml
configs/: .gitignore  LICENSE  README.md  train.yaml  vec2vec_ml_config_template.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: california_housing.yaml  common_data.yaml  graph_to_vector.yaml  regression.yaml
configs/debug/: default.yaml
configs/hparams_search/: optuna.yaml
configs/hydra/: default.yaml
configs/model/: README.md  cnn.yaml  cnn_default.yaml  common_model.yaml  gnn.yaml  gnn_default.yaml  mlp.yaml  mlp_default.yaml  mlp_random_architecture.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
crescendo/: README.md  __init__.py  analysis.py  data.py  defaults.py  entrypoint.py  logger.py
crescendo/_tests/: conftest.py  test_array.py  test_cnn.py  test_data.py
crescendo/configs/: train.yaml
crescendo/configs/callbacks/: default.yaml
crescendo/configs/data/: california_housing.yaml
crescendo/configs/hparams_search/: optuna.yaml
crescendo/configs/hydra/: default.yaml
crescendo/configs/logger/: csv.yaml
crescendo/configs/model/: README.md  mlp_default.yaml
crescendo/data/: _common.py  array.py  common.py
crescendo/data_containers/: base.py  standard.py
crescendo/datasets/: base.py  gm9_dataset.py  qm9.py  qm9_dataset.py  text_datasets.py  vec2vec.py
crescendo/datum/: base.py  qm9_smiles_datum.py
crescendo/featurizers/: geometry.py  graphs.py
crescendo/loaders/: base.py  qm8_loaders.py  qm9_analyze.py  qm9_loaders.py  text_loaders.py
crescendo/loaders/utils/: qm9_smiles_datum.py
crescendo/models/: cnn.py  embedding.py  feedforward.py  gnn.py  mlp.py  mpnn.py
crescendo/preprocess/: array.py  materials_processing.py
crescendo/protocols/: base_protocol.py  graph_protocols.py  vec2vec_protocols.py
crescendo/readers/: qm9_readers.py
crescendo/samplers/: base.py
crescendo/scripts/: on_compute.py  qm9_graph_vector_compute.py
crescendo/utils/: README.md  __init__.py  arg_parser.py  datasets.py  graphs.py  instantiators.py  logger.py  managers.py  ml_utils.py  modifiers.py  mol_utils.py  other_utils.py  plot.py  plots.py  py_utils.py  qm9_run_utils.py  timing.py  training_utils.py  wrappers.py
crescendo/utils/managers/: manager_base.py  qm9_manager.py  vec2vec_manager.py
crescendo/utils/old/: graphs.py  managers.py  ml_utils.py  py_utils.py
data/: README.md  qm8_test_data.txt  test_3_column.csv
data/csv_test_data/: test_10_column.csv
data/df_testing_data/: features.csv  idx.csv  meta.csv  targets.csv
data/qm8_test_data/: gdb8_22k_elec_spec_000001  gdb8_22k_elec_spec_000002  gdb8_22k_elec_spec_000003  gdb8_22k_elec_spec_000004.txt  gdb8_22k_elec_spec_000005.txt  gdb8_22k_elec_spec_000006.txt  gdb8_22k_elec_spec_000007.txt  gdb8_22k_elec_spec_000008.txt  gdb8_22k_elec_spec_000009.txt
examples/00_xas_to_functional_groups/: README.md
examples/00_xas_to_functional_groups/00a_hyperparameter_tune/: README.md  run.sh
examples/00_xas_to_functional_groups/00b_ensemble_training/: run.sh
examples/00_xas_to_functional_groups/data/: README.md
examples/00_xas_to_functional_groups/data/C-XANES/: X_test.npy  X_val.npy  Y_test.npy  Y_train.npy  Y_val.npy  functional_groups.txt  splits.json
examples/01_graph_to_xas/: README.md  run.sh
examples/01_graph_to_xas/data/: X_test.pkl  X_train.pkl  X_val.pkl  Y_test.npy  Y_train.npy  Y_val.npy
examples/01_graph_to_xas/raw_data/mp-4093/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4093/FEFF-XANES/000_Cu/: ATOMS  HEADER  POTENTIALS  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4093/FEFF-XANES/002_Cu/: ATOMS  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4158/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4158/FEFF-XANES/002_Cu/: ATOMS  HEADER  POTENTIALS  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4371/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4371/FEFF-XANES/002_Cu/: ATOMS  HEADER  POTENTIALS  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4386/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4386/FEFF-XANES/000_Cu/: ATOMS  HEADER  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4386/FEFF-XANES/002_Cu/: ATOMS  POTENTIALS  feff.inp  feff.out
examples/01_graph_to_xas/raw_data/mp-4711/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4860/: POSCAR
examples/01_graph_to_xas/raw_data/mp-4870/: POSCAR
old_configs/: ml_config_template.yaml  slurm_config_template.yaml
py_scripts/: 001_graph_to_vector_example.py  002_qm9_test.py  README.md
scripts/: README.md  graph_compute.py  run_examples.sh  smoke.sh  update_version.sh
tests/: test_data_containers.py  test_datasets.py
tests/test_datasets/: test_qm9.py  test_vec2vec.py
tests/test_featurizers/: test_mol_to_graph_via_DGL.py
tests/test_models/: test_embedding.py  test_mpnn.py
tests/test_protocols/: test_graph_protocol.py  test_qm9_pipeline.py  test_vec2vec_pipeline.py
tests/test_samplers/: test_samplers.py
tests/test_utils/: test_graphs.py  test_py_utils.py
tutorials/: 01_Loading_QM9.ipynb  01_QM9.ipynb  02_Example_Graph_Training_Pipeline.ipynb
(+18 files in other folders)
