[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "crescendo"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
description = "Machine learning made easy"
readme = "README.md"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "torch==2.0.0",
    "torchvision==0.15.1",
    "lightning==2.0.2",
    "torchmetrics==0.11.4",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "pymatgen==2023.9.10",
    "matgl==0.8.5",
    "pandas",
    "numpy",
    "scikit-learn",
    "rich",
    "loguru",
]

# Dynamic version reads __version__ directly from my_package.__init__
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "black",
    "nbstripout",
    "pre-commit",
]
doc = [
    "sphinx",
    "numpydoc",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "ipython",
    "matplotlib"
]

[tool.setuptools]
packages = ["crescendo"]

[project.scripts]
cr = "crescendo.entrypoint:entrypoint"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs/source/conf.py
)/
'''
